feat: cleanup and methods in StoreBuildResult.java (WIP)
* started work on issue #15 (WIP)
* minor cleanup and adjustments

Co-authored-by: Philip Ågren Jahnsson <philipaj-kth@users.noreply.github.com>
Co-authored-by: linda.nycander@gmail.com <linda.nycander@gmail.com>
Co-authored-by: Elin Fransholm <efransholm@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,6 @@ buildNumber.properties
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,visualstudiocode,intellij,macos
+
+.env
+*.pem
