--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,5 @@ services:
     volumes:
       - .:/usr/app
       - ./private-key.pem:/usr/app/private-key.pem
+    environment:
+      - PRIVATE_KEY_PATH=/usr/app/private-key.pem
