--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,7 @@ services:
       - "127.0.0.1:8080:8080"
     volumes:
       - .:/usr/app
+      - ./private-key.pem:/usr/app/private-key.pem
+    environment:
+      - PRIVATE_KEY_PATH=/usr/app/private-key.pem
+      - APP_ID=${APP_ID} # read from .env file
