--- a/ciapp/pom.xml
+++ b/ciapp/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
+         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>4.4.0</version>
@@ -76,6 +76,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
+                <configuration>
+                <redirectTestOutputToFile>false</redirectTestOutputToFile>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
