fix: add maven plugin for adding api documentation directory to root of project
Add maven plugin for copying the api documentation to the project root. Also, add the copied api documentation to the repo.

closes #76

--- a/ciapp/pom.xml
+++ b/ciapp/pom.xml
@@ -89,6 +89,26 @@
                 </executions>
             </plugin>
             <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-javadoc</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <target>
+                                <copy todir="${project.basedir}/docs">
+                                    <fileset dir="${project.build.directory}/site/apidocs"/>
+                                </copy>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
