--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,9 +10,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["main"]
+    branches: ['main']
 
 jobs:
   build:
@@ -23,8 +23,16 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: "17"
-          distribution: "temurin"
+          java-version: '17'
+          distribution: 'temurin'
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file ciapp/pom.xml
+      - name: Generate Javadoc
+        run: mvn javadoc:javadoc --file ciapp/pom.xml
+      - name: Copy Javadoc to docs/
+        run: |
+          rm -rf docs/*
+          cp -r ciapp/target/site/apidocs/* docs/
+      - name: Disable Jekyll for GitHub Pages
+        run: touch docs/.nojekyll
